rules/ingress-and-egress-blocked/test/cnp-match-expressions-selective-failed/input/cilium_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: selective
  namespace: my-ns
spec:
  endpointSelector:
    matchLabels: {}
    matchExpressions:
      - key: role
        operator: In
        values:
          - frontend
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
